Pushing updated index.html

--- a/views/index.html
+++ b/views/index.html
@@ -54,30 +54,22 @@
 
         <div class="row marketing">
             <div class="col-lg-6">
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+                <h4>Blue Tounged Skink</h4>
+                <p>Big bodied Eastern Australian lizard with short limbs and blue tounge.</p>
 
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+                <h4>Bearded Dragon</h4>
+                <p>Most common pet lizard in New Zealand and originates from arid parts of Ausralia.</p>
 
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-            </div>
+                <h4>Leopard Gecko</h4>
+                <p>Small bodied gecko that features spots like a leopard.</p>
 
-            <div class="col-lg-6">
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-                <h4>Subheading</h4>
-                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+                <h4>Red Eared Slider</h4>
+                <p>Most common pet turtle with red marks around their ears.</p>
             </div>
         </div>
 
         <footer class="footer">
-            <p>&copy; 2015 Company, Inc.</p>
+            <p>&copy; 2022 Reptile Resource NZ, Ltd.</p>
         </footer>
 
     </div>
