--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,7 +48,7 @@
 
         <div class="jumbotron">
             <h1>Home Page</h1>
-            <p class="lead">This is the home page</p>
+            <p class="lead"><%=pageTitle%></p>
             <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
         </div>
 
