--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Home</title>
+    <title><%=pageTitle%></title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,12 +43,18 @@
                     <li role="presentation"><a href="#">Contact</a></li>
                 </ul>
             </nav>
-            <h3 class="text-muted">Project name</h3>
+            <h3 class="text-muted">
+                <% if(name){ %>
+                    <p>Hello <%-name%></p>
+                <%} else {%>
+                    <p>Hi There</p>
+                <%}%>
+            </h3>
         </div>
 
         <div class="jumbotron">
-            <h1>Home Page</h1>
-            <p class="lead"><%=pageTitle%></p>
+            <h1><%=pageTitle%></h1>
+            <p class="lead"></p>
             <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
         </div>
 
