--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,8 +39,13 @@
             <nav>
                 <ul class="nav nav-pills pull-right">
                     <li role="presentation" class="active"><a href="#">Home</a></li>
-                    <li role="presentation"><a href="#">About</a></li>
-                    <li role="presentation"><a href="#">Contact</a></li>
+                    <li role="presentation"><a href="addPage">
+                        <% if (name) { %>
+                            Add
+                        <% } else { %>
+                            Login
+                        <% } %>
+                    </a></li>
                 </ul>
             </nav>
             <h3 class="text-muted">
