added impved descriptions and photo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,13 +69,14 @@
                 <p>Big bodied Eastern Australian lizard with short limbs and blue tounge.</p>
 
                 <h4>Bearded Dragon</h4>
-                <p>Most common pet lizard in New Zealand and originates from arid parts of Ausralia.</p>
+
+                <p>Most common pet lizard in New Zealand and originates from arid parts of Australia.</p>
 
                 <h4>Leopard Gecko</h4>
-                <p>Small bodied gecko that features spots like a leopard.</p>
+                <p>Small lizard with a large head and a long tail. They are native to the Middle East and parts of Asia.</p>
 
                 <h4>Red Eared Slider</h4>
-                <p>Most common pet turtle with red marks around their ears.</p>
+                <p>Common pet turtle that is native to the United States.</p>
             </div>
         </div>
 
