added initial add page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,8 @@
                         <% if (name) { %>
                             Add
                         <% } else { %>
-                            Login
+                            <!-- change this when implimenting login -->
+                            add
                         <% } %>
                     </a></li>
                 </ul>
