--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,5 +99,5 @@
 
     </div>
 
-    <script src = "../data/config.js"></script>
+    <script type="module" src = "../data/config.js"></script>
 </html>
