--- a/views/addPage.ejs
+++ b/views/addPage.ejs
@@ -17,7 +17,8 @@
                 <label> Name: </label>
                     <input type="text" name="name">
 
-                <button type="submit" >Add</button>
+                <button type="submit" name="action" value="add" >Add</button>
+                <button type="submit" name="action" value="delete" >Delete</button>
             </form>
         </main>
         <!--Write out a definition of a reptile-->
@@ -25,4 +26,4 @@
 
     </body>
 
-</html>
+</html> 
