added functioning delete and updtaed data items

--- a/views/addPage.ejs
+++ b/views/addPage.ejs
@@ -14,11 +14,31 @@
                 <label> ID: </label>
                     <input type="text" name="id">
                 
-                <label> Name: </label>
+                <label> Species: </label>
                     <input type="text" name="name">
+
+                <label> Scientific Name: </label>
+                    <input type="text" name="scientificName">
+                
+                <label> Location: </label>
+                    <input type="text" name="location">
+                
+                <label> Description: </label>
+                    <input type="text" name="description">
+
+                <label> Life Expectency: </label>
+                    <input type="text" name="lifeExpectancy">
+
+                <label> Diet: </label>
+                    <input type="text" name="diet">
+
+                <label> Enclosure: </label>
+                    <input type="text" name="enclosure">
 
                 <button type="submit" name="action" value="add" >Add</button>
                 <button type="submit" name="action" value="delete" >Delete</button>
+                <button type="submit" name="action" value="select" >Select</button>
+                <button type="submit" name="action" value="update" >Update</button>
             </form>
         </main>
         <!--Write out a definition of a reptile-->
