--- a/views/addPage.ejs
+++ b/views/addPage.ejs
@@ -12,33 +12,33 @@
         <main>
             <form action=" /addPage" method="POST">
                 <label> ID: </label>
-                    <input type="text" name="id">
+                    <input type="text" name="id" value= <%=idInput%>><br><br>
                 
                 <label> Species: </label>
-                    <input type="text" name="name">
+                    <input type="text" name="name" value= <%=nameInput%>><br><br>
 
                 <label> Scientific Name: </label>
-                    <input type="text" name="scientificName">
+                    <input type="text" name="scientificName" autocomplete="off" value= <%=scientificNameInput%> ><br><br>
                 
                 <label> Location: </label>
-                    <input type="text" name="location">
+                    <input type="text" name="location" value= <%=locationInput%>><br><br>
                 
                 <label> Description: </label>
-                    <input type="text" name="description">
+                    <input type="text" name="description" value= <%-descriptionInput%>><br><br>
 
                 <label> Life Expectency: </label>
-                    <input type="text" name="lifeExpectancy">
+                    <input type="text" name="lifeExpectancy" value= <%=lifeExpectancyInput%>><br><br>
 
                 <label> Diet: </label>
-                    <input type="text" name="diet">
+                    <input type="text" name="diet"value= <%=dietInput%>><br><br>
 
                 <label> Enclosure: </label>
-                    <input type="text" name="enclosure">
+                    <input type="text" name="enclosure"value= <%=enclosureInput%>><br><br>
 
-                <button type="submit" name="action" value="add" >Add</button>
-                <button type="submit" name="action" value="delete" >Delete</button>
-                <button type="submit" name="action" value="select" >Select</button>
-                <button type="submit" name="action" value="update" >Update</button>
+                <button type="submit" name="action" value="add" >Add</button><br><br>
+                <button type="submit" name="action" value="delete" >Delete</button><br><br>
+                <button type="submit" name="action" value="select" >Select</button><br><br>
+                <button type="submit" name="action" value="update" >Update</button><br><br>
             </form>
         </main>
         <!--Write out a definition of a reptile-->
