add local database stuff

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -91,7 +91,10 @@
                 <% } else { %>
                     <ul>
                     <% reptiles.forEach( p => { %>
-                        <li><%= p.name %> <%= p.id %></li>
+                        <div>
+                            <h4>ID: <%= p.id %>  <%= p.name %></h4>
+                            <p><%= p.description %></p>
+                        </div>
                     <% }) %>
                     </ul>
                 <% } %>
