added signup and login ability

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,6 +70,12 @@
             <p><a class="btn btn-lg btn-success" href="/auth/google" role="button">Login with Google</a></p>
         </div>
 
+        <div class="jumbotron">
+            <h1><%=pageTitle%></h1>
+            <p class="lead"></p>
+            <p><a class="btn btn-lg btn-success" href="/register" role="button">Sign up</a></p>
+        </div>
+
         <h1>Hi <%= name %></h1>
         <form action="/logout?_method=DELETE" method="POST">
             <button type="submit">Log Out</button>
