--- a/views/addPage.ejs
+++ b/views/addPage.ejs
@@ -26,7 +26,7 @@
                 <label> Description: </label>
                     <input type="text" name="description" value= "<%-descriptionInput%>"><br><br>
 
-                <label> Life Expectency: </label>
+                <label> Life Expectancy: </label>
                     <input type="text" name="lifeExpectancy" value= "<%=lifeExpectancyInput%>"><br><br>
 
                 <label> Diet: </label>
@@ -35,10 +35,10 @@
                 <label> Enclosure: </label>
                     <input type="text" name="enclosure"value= "<%=enclosureInput%>"><br><br>
 
-                <button type="submit" name="action" value="add" >Add</button><br><br>
-                <button type="submit" name="action" value="delete" >Delete</button><br><br>
-                <button type="submit" name="action" value="select" >Select</button><br><br>
-                <button type="submit" name="action" value="update" >Update</button><br><br>
+                <button type="submit" name="action" value="add" >Add</button>
+                <button type="submit" name="action" value="delete" >Delete</button>
+                <button type="submit" name="action" value="select" >Select</button>
+                <button type="submit" name="action" value="update" >Update</button>
             </form>
         </main>
        
