--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,18 +76,8 @@
 
         <div class="row marketing">
             <div class="col-lg-6">
-                <h4>Blue Tounged Skink</h4>
-                <p>Big bodied Eastern Australian lizard with short limbs and blue tounge.</p>
-
-                <h4>Bearded Dragon</h4>
-
-                <p>Most common pet lizard in New Zealand and originates from arid parts of Australia.</p>
-
-                <h4>Leopard Gecko</h4>
-                <p>Small lizard with a large head and a long tail. They are native to the Middle East and parts of Asia.</p>
-
-                <h4>Red Eared Slider</h4>
-                <p>Common pet turtle that is native to the United States.</p>
+                <h4>What are Reptiles?</h4>
+                <p>Reptiles are cold-blooded vertebrates that are distinguished by their dry, scaly skin, their four-chambered hearts, and their ability to lay eggs on land. They are also characterized by their high metabolic rate, their low body temperature, and their ability to survive in a wide range of environments. Reptiles are found on every continent except Antarctica, and they are the most numerous of all vertebrates. They are also the most diverse group of vertebrates, with more than 10,000 species. The earliest reptiles appeared in the late Paleozoic Era, about 300 million years ago. The first reptiles were amphibious, but they gradually became more adapted to life on land. The first reptiles were small, but they grew larger and more diverse as the Mesozoic Era progressed. The Mesozoic Era ended about 65 million years ago, when a meteorite struck the Earth and caused a mass extinction. The dinosaurs, the most famous reptiles, were among the species that became extinct. The Cenozoic Era began about 65 million years ago, and it is the era in which humans evolved. Reptiles are divided into two groups: the turtles and tortoises, and the lizards, snakes, and crocodiles. The turtles and tortoises are the most primitive reptiles. They are characterized by their hard shells, which protect them from predators. The lizards, snakes, and crocodiles are the most advanced reptiles. They are characterized by their ability to move quickly and to breathe through lungs. The lizards, snakes, and crocodiles are also characterized by their ability to lay eggs on land. The lizards, snakes, and crocodiles are the most diverse group of reptiles. They are found in a wide range of habitats, from deserts to rain forests. The lizards, snakes, and crocodiles are also the most numerous group of reptiles. They are found on every continent except Antarctica. The lizards, snakes, and crocodiles are also the most dangerous group of reptiles. They are responsible for the deaths of more than 100,000 people each year. The lizards, snakes, and crocodiles are also the most important group of reptiles. They are the source of leather, meat, and medicine. The lizards, snakes, and crocodiles are also the most important group of reptiles
                 
                 <h1>Reptiles</h1>
                 <% if(reptiles.length == 0){ %>
@@ -96,8 +86,19 @@
                     <ul>
                     <% reptiles.forEach( p => { %>
                         <div>
-                            <h4>ID: <%= p.id %>  <%= p.name %></h4>
-                            <p><%= p.description %></p>
+                            <h3>ID: <%= p.id %>  <%= p.name %></h3>
+                            <h4>Scientific Name</h4>
+                            <p>&nbsp&nbsp<%= p.scientificName %></p>
+                            <h4>Description</h4>
+                            <p>&nbsp&nbsp<%= p.description %></p>
+                            <h4>Location</h4>
+                            <p>&nbsp&nbsp<%= p.location %></p>
+                            <h4>Life Expectancy</h4>
+                            <p>&nbsp&nbsp<%= p.lifeExpectancy %></p>
+                            <h4>Diet</h4>
+                            <p>&nbsp&nbsp<%= p.diet %></p>
+                            <h4>Enclosure</h4>
+                            <p>&nbsp&nbsp<%= p.enclosure %></p>
                         </div>
                     <% }) %>
                     </ul>
