--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,12 @@
                         <% } %>
                     </a></li>
                 </ul>
+
+                <% if(isLoggedIn){ %>
+                    <h4><a href="addPage">Edit</a></h4>
+                <% } %>
+
+                
             </nav>
             <h3 class="text-muted">
                 <% if(name){ %>
